// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Svelte Code Generator > Advanced Features > should generate Canvas element 1`] = `
"<script lang="ts">
</script>

<div class="container mx-auto p-6">
  <canvas width={800} height={600} />
</div>
"
`;

exports[`Svelte Code Generator > Advanced Features > should generate Table with accessibility attributes 1`] = `
"<script lang="ts">
</script>

<div class="container mx-auto p-6">
  <table class="w-full" role="table">
    <thead>
      <tr>
        <th scope="col"> Name </th>
      </tr>
    </thead>
  </table>
</div>
"
`;

exports[`Svelte Code Generator > Advanced Features > should generate Video with event handlers 1`] = `
"<script lang="ts">
</script>

<div class="container mx-auto p-6">
  <video
    src="/video.mp4"
    controls="true"
    onPlay={handlePlay}
    aria-label="Tutorial video"
  />
</div>
"
`;

exports[`Svelte Code Generator > Basic Components > should generate Button component 1`] = `
"<script lang="ts">
</script>

<div class="container mx-auto p-6">
  <button variant="primary"> Click me </button>
</div>
"
`;

exports[`Svelte Code Generator > Basic Components > should generate Input component 1`] = `
"<script lang="ts">
</script>

<div class="container mx-auto p-6">
  <input placeholder="Enter text" />
</div>
"
`;

exports[`Svelte Code Generator > CSS Variables > should generate style block with CSS variables 1`] = `
"<script lang="ts">
</script>

<div class="container mx-auto p-6">
  <button> Button </button>
</div>

<style>
  :root {
    --color-primary: #0e5ef7;
    --spacing-card: 1.5rem;
  }
</style>
"
`;

exports[`Svelte Code Generator > Complete Integration > should generate complete Svelte component with all features 1`] = `
"<script lang="ts">
  import CustomHeader from "./components/Header";
  import { onMount } from "svelte";
  let count = 0;

  let users = null;
  let usersLoading = true;
  let usersError = null;

  onMount(async () => {
    try {
      const response = await fetch("/api/users");
      users = await response.json();
    } catch (err) {
      usersError = err;
    } finally {
      usersLoading = false;
    }
  });
</script>

<div class="container mx-auto p-6">
  <CustomHeader />
  <p class="text-2xl font-bold">
    Count: {count}
  </p>
</div>

<style>
  :root {
    --color-primary: #0e5ef7;
  }
</style>
"
`;

exports[`Svelte Code Generator > Conditional Rendering > should generate #if #else blocks 1`] = `
"<script lang="ts">
</script>

<div class="container mx-auto p-6">
  {#if isPremium}
    <span variant="success"> Premium </span>
  {:else}
    <span> Free </span>
  {/if}
</div>
"
`;

exports[`Svelte Code Generator > Conditional Rendering > should generate #if block 1`] = `
"<script lang="ts">
</script>

<div class="container mx-auto p-6">
  {#if isActive}
    <span> Active </span>
  {/if}
</div>
"
`;

exports[`Svelte Code Generator > Data Block > should generate fetch in onMount 1`] = `
"<script lang="ts">
  import { onMount } from "svelte";
  let users = null;
  let usersLoading = true;
  let usersError = null;

  onMount(async () => {
    try {
      const response = await fetch("/api/users");
      users = await response.json();
    } catch (err) {
      usersError = err;
    } finally {
      usersLoading = false;
    }
  });
</script>

<div class="container mx-auto p-6">
  <p>Users loaded</p>
</div>
"
`;

exports[`Svelte Code Generator > HTML Elements > should generate Div with Tailwind classes 1`] = `
"<script lang="ts">
</script>

<div class="container mx-auto p-6">
  <div class="container mx-auto p-4">Hello World</div>
</div>
"
`;

exports[`Svelte Code Generator > HTML Elements > should generate Form element 1`] = `
"<script lang="ts">
</script>

<div class="container mx-auto p-6">
  <form action="/submit" class="space-y-4">Form content</form>
</div>
"
`;

exports[`Svelte Code Generator > HTML Elements > should generate Image (Img) with src and alt 1`] = `
"<script lang="ts">
</script>

<div class="container mx-auto p-6">
  <img src="/logo.png" alt="Logo" class="w-32 h-32" />
</div>
"
`;

exports[`Svelte Code Generator > HTML Elements > should generate Link (A) with href 1`] = `
"<script lang="ts">
</script>

<div class="container mx-auto p-6">
  <a href="https://example.com" class="text-blue-500 underline"> Click here </a>
</div>
"
`;

exports[`Svelte Code Generator > HTML Elements > should generate heading tags 1`] = `
"<script lang="ts">
</script>

<div class="container mx-auto p-6">
  <h1 class="text-3xl font-bold">Main Title</h1>
  <h2 class="text-2xl">Subtitle</h2>
</div>
"
`;

exports[`Svelte Code Generator > HTML Elements > should generate list elements 1`] = `
"<script lang="ts">
</script>

<div class="container mx-auto p-6">
  <ul class="list-disc">
    <li>Item 1</li>
    <li>Item 2</li>
  </ul>
</div>
"
`;

exports[`Svelte Code Generator > HTML Elements > should generate semantic HTML elements 1`] = `
"<script lang="ts">
</script>

<div class="container mx-auto p-6">
  <header class="bg-gray-100">Header</header>
  <main class="container">
    <section>Content</section>
  </main>
  <footer class="mt-8">Footer</footer>
</div>
"
`;

exports[`Svelte Code Generator > Import Statements > should handle imported components 1`] = `
"<script lang="ts">
  import Counter from "./components/Counter";
</script>

<div class="container mx-auto p-6">
  <Counter initial={10} />
</div>
"
`;

exports[`Svelte Code Generator > Loop Rendering > should generate #each block 1`] = `
"<script lang="ts">
</script>

<div class="container mx-auto p-6">
  {#each users as user (user.id || Math.random())}
    <div>User</div>
  {/each}
</div>
"
`;

exports[`Svelte Code Generator > State Block > should generate let declarations 1`] = `
"<script lang="ts">
  let count = 0;
  let isOpen = false;
</script>

<div class="container mx-auto p-6">
  <p>
    Count: {count}
  </p>
</div>
"
`;

exports[`Svelte Code Generator > Tailwind CSS Support > should preserve class attribute 1`] = `
"<script lang="ts">
</script>

<div class="container mx-auto p-6">
  <button class="bg-blue-500 text-white px-4 py-2"> Click me </button>
</div>
"
`;

exports[`Svelte Code Generator > Variable References > should render variable references in props 1`] = `
"<script lang="ts">
</script>

<div class="container mx-auto p-6">
  <input value={username} />
</div>
"
`;

exports[`Svelte Code Generator > Variable References > should render variable references with curly braces 1`] = `
"<script lang="ts">
  let count = 0;
</script>

<div class="container mx-auto p-6">
  <p>
    Count: {count}
  </p>
</div>
"
`;
